--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="demo.chat.yingshe.com.customrectangleprogressview.MainActivity">
+    android:paddingTop="@dimen/activity_vertical_margin">
 
     <View
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorAccent" />
 
-    <demo.chat.yingshe.com.customrectangleprogressview.RectangleProgressView
+    <demo.chat.yingshe.com.customrectangleprogressview.RectangleProgressView2
         android:id="@+id/rpv"
         android:layout_width="150dp"
         android:layout_height="200dp"
@@ -24,10 +22,33 @@
         android:padding="10dp" />
 
     <Button
-        android:id="@+id/btn"
+        android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:text="开始" />
+        android:background="#000"
+        android:text="开始"
+        android:textColor="#fff"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/pause"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/start"
+        android:text="暂停"
+        android:textColor="#fff"
+        android:textSize="18sp" />
+
+    <Button
+        android:id="@+id/stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@id/pause"
+        android:text="停止"
+        android:textColor="#fff"
+        android:textSize="18sp" />
 
 </RelativeLayout>
